--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -150,6 +150,7 @@ cairo_sources = \
 	cairo-pen.c \
 	cairo-polygon.c \
 	cairo-rectangle.c \
+	cairo-rectangular-scan-converter.c \
 	cairo-region.c \
 	cairo-rtree.c \
 	cairo-scaled-font.c \
