configure: dri2 is only required for xcb-drm
Move the optional dependency on dri2 to the xcb-drm integration where it
is required.

--- a/configure.ac
+++ b/configure.ac
@@ -109,7 +109,7 @@ CAIRO_ENABLE_SURFACE_BACKEND(xlib_xrender, Xlib Xrender, auto, [
 dnl ===========================================================================
 
 CAIRO_ENABLE_SURFACE_BACKEND(xcb, XCB, no, [
-  xcb_REQUIRES="xcb >= 0.9.92 xcb-render >= 0.9.92 xcb-shm xcb-dri2"
+  xcb_REQUIRES="xcb >= 0.9.92 xcb-render >= 0.9.92 xcb-shm"
   PKG_CHECK_MODULES(xcb, $xcb_REQUIRES, ,
 		    [AC_MSG_RESULT(no)
 		    use_xcb="no (requires $xcb_REQUIRES http://xcb.freedesktop.org)"])
@@ -255,7 +255,10 @@ CAIRO_ENABLE_SURFACE_BACKEND(gallium, Gallium3D, no, [
 
 CAIRO_ENABLE_FUNCTIONS(xcb_drm, XCB/DRM, no, [
   if test "x$use_xcb" == "xyes" -a "x$use_drm" == "xyes"; then
-    use_xcb_drm="yes"
+      xcb_drm_REQUIRES="xcb-dri2"
+      PKG_CHECK_MODULES(xcb_drm, $xcb_drm_REQUIRES, ,
+			[AC_MSG_RESULT(no)
+			use_xcb_drm="no (requires $xcb_drm_REQUIRES http://xcb.freedesktop.org)"])
   else
     use_xcb_drm="no (requires both --enable-xcb and --enable-drm)"
   fi
