configure: Enable AC_SYS_LARGEFILE for drm
drm makes use of 64bit offsets when mmaping, and so we require the
64bit file interfaces. I had presumed that it would be pulled in with
AC_GNU_SOURCE, but no.

--- a/configure.ac
+++ b/configure.ac
@@ -14,6 +14,7 @@ AC_PROG_LIBTOOL dnl ([1.4]) Don't remove!
 DOLT dnl Make my libtool fast!
 GTK_DOC_CHECK([1.6])
 
+AC_SYS_LARGEFILE
 AC_GNU_SOURCE
 
 dnl ===========================================================================
