--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -18,6 +18,7 @@ test_sources = \
 	clip-disjoint.c					\
 	clip-device-offset.c				\
 	clip-empty.c					\
+	clip-empty-save.c				\
 	clip-fill.c					\
 	clip-fill-no-op.c				\
 	clip-fill-rule.c				\
