--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -128,6 +128,7 @@ test_sources = \
 	line-width-zero.c				\
 	linear-gradient.c				\
 	linear-gradient-reflect.c			\
+	linear-step-function.c				\
 	linear-uniform.c				\
 	long-dashed-lines.c				\
 	long-lines.c					\
