--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -7,6 +7,7 @@ test_sources = \
 	big-line.c					\
 	big-trap.c					\
 	bilevel-image.c					\
+	bug-bo-rectangular.c				\
 	caps.c						\
 	caps-joins.c					\
 	caps-joins-alpha.c				\
