--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -25,6 +25,7 @@ test_sources = \
 	clip-fill-rule.c				\
 	clip-fill-rule-pixel-aligned.c			\
 	clip-fill-unbounded.c				\
+	clip-group-shapes.c				\
 	clip-image.c					\
 	clip-nesting.c					\
 	clip-operator.c					\
