test: Test downscaling and extending a surface pattern.
Franz Schmid reported a regression in 1.9.6 when downscaling
and using EXTEND_REPEAT for an image surface pattern.  This
patch adds such tests for every extend mode.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -226,6 +226,7 @@ test_sources = \
 	surface-pattern-big-scale-down.c		\
 	surface-pattern-operator.c			\
 	surface-pattern-scale-down.c			\
+	surface-pattern-scale-down-extend.c		\
 	surface-pattern-scale-up.c			\
 	text-antialias-gray.c				\
 	text-antialias-none.c				\
