--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -838,7 +838,9 @@ REFERENCE_IMAGES = \
 	rotated-clip.ref.png \
 	rotated-clip.ps.ref.png \
 	rotated-clip.xlib.ref.png \
+	rounded-rectangle-fill.ref.png \
 	rounded-rectangle-fill.xlib.ref.png \
+	rounded-rectangle-stroke.ref.png \
 	rounded-rectangle-stroke.xlib.ref.png \
 	scale-down-source-surface-paint.ref.png \
 	scale-offset-image.gl.ref.png \
