--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -1,6 +1,7 @@
 test_sources = \
 	a1-image-sample.c 				\
 	a1-mask.c					\
+	a1-mask-sample.c 				\
 	a1-traps-sample.c				\
 	a8-mask.c					\
 	alpha-similar.c					\
