--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -315,6 +315,7 @@ cairo_gl_headers = cairo-gl.h
 cairo_gl_private = cairo-gl-private.h
 cairo_gl_sources = cairo-gl-surface.c cairo-gl-glyphs.c cairo-gl-shaders.c
 cairo_glx_sources += cairo-glx-context.c
+cairo_egl_sources += cairo-egl-context.c
 
 cairo_directfb_headers = cairo-directfb.h
 cairo_directfb_sources = cairo-directfb-surface.c
