--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -356,6 +356,13 @@ cairo_drm_sources = drm/cairo-drm.c \
 		    drm/cairo-drm-radeon-surface.c
 cairo_gallium_sources = drm/cairo-drm-gallium-surface.c
 
+if BUILD_DRM_XR
+cairo_drm_headers += cairo-drm-xr.h
+cairo_drm_sources += \
+		     drm/cairo-drm-xr.c \
+		     $(NULL)
+endif
+
 cairo_script_headers = cairo-script.h
 cairo_script_sources = cairo-script-surface.c
 
