--- a/src/Makefile.win32.features
+++ b/src/Makefile.win32.features
@@ -231,6 +231,20 @@ ifeq ($(CAIRO_HAS_DRM_SURFACE),1)
 enabled_cairo_pkgconf += cairo-drm.pc
 endif
 
+unsupported_cairo_headers += $(cairo_drm_xr_headers)
+all_cairo_headers += $(cairo_drm_xr_headers)
+all_cairo_private += $(cairo_drm_xr_private)
+all_cairo_sources += $(cairo_drm_xr_sources)
+ifeq ($(CAIRO_HAS_DRM_XR_FUNCTIONS),1)
+enabled_cairo_headers += $(cairo_drm_xr_headers)
+enabled_cairo_private += $(cairo_drm_xr_private)
+enabled_cairo_sources += $(cairo_drm_xr_sources)
+endif
+all_cairo_pkgconf += cairo-drm-xr.pc
+ifeq ($(CAIRO_HAS_DRM_XR_FUNCTIONS),1)
+enabled_cairo_pkgconf += cairo-drm-xr.pc
+endif
+
 unsupported_cairo_headers += $(cairo_gallium_headers)
 all_cairo_headers += $(cairo_gallium_headers)
 all_cairo_private += $(cairo_gallium_private)
@@ -272,6 +286,14 @@ all_cairo_pkgconf += cairo-png.pc
 ifeq ($(CAIRO_HAS_PNG_FUNCTIONS),1)
 enabled_cairo_pkgconf += cairo-png.pc
 endif
+
+supported_cairo_headers += $(cairo_glew_headers)
+all_cairo_headers += $(cairo_glew_headers)
+all_cairo_private += $(cairo_glew_private)
+all_cairo_sources += $(cairo_glew_sources)
+enabled_cairo_headers += $(cairo_glew_headers)
+enabled_cairo_private += $(cairo_glew_private)
+enabled_cairo_sources += $(cairo_glew_sources)
 
 unsupported_cairo_headers += $(cairo_gl_headers)
 all_cairo_headers += $(cairo_gl_headers)
