test: Add gradient-zero-stops-mask
Add a test to check that gradient with no stops are not considered
opaque by gstate (and thus masking with them is not optimized to
paint).

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -540,6 +540,8 @@ REFERENCE_IMAGES = \
 	gradient-constant-alpha.rgb24.ref.png \
 	gradient-zero-stops.ref.png \
 	gradient-zero-stops.rgb24.ref.png \
+	gradient-zero-stops-mask.argb32.ref.png \
+	gradient-zero-stops-mask.rgb24.ref.png \
 	group-clip.ref.png \
 	group-paint.ref.png \
 	group-unaligned.pdf.new.png \
