test: Add inverse text
This is exercising a bug that I have introduced either in the xcb
backend or in the driver in my experimental branches. So simple, yet so
wrong.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -568,6 +568,7 @@ REFERENCE_IMAGES = \
 	infinite-join.ps2.ref.png \
 	infinite-join.ps3.ref.png \
 	infinite-join.ref.png \
+	inverse-text.ref.png \
 	joins.ps.ref.png \
 	joins.ref.png \
 	large-clip.ref.png \
