--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -118,6 +118,7 @@ test_sources = \
 	in-fill-empty-trapezoid.c			\
 	in-fill-trapezoid.c				\
 	invalid-matrix.c				\
+	inverse-text.c					\
 	joins.c						\
 	large-clip.c					\
 	large-font.c					\
