test: Add clip-contexts
This should exercise a bug found by Jeff Muizelaar that
cairo-surface-clipper was mistakenly thinking that clip operations on a
second context was a no-op as the topmost clip path matched that of the
previous context.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -168,6 +168,7 @@ REFERENCE_IMAGES = \
 	clear.svg12.rgb24.xfail.png \
 	clear-source.ref.png \
 	clip-all.ref.png \
+	clip-contexts.ref.png \
 	clip-device-offset.argb32.ref.png \
 	clip-device-offset.rgb24.ref.png \
 	clip-disjoint.ref.png \
