test: Add test checking that all setters properly check surface->status
In particular, make sure that the setters when called on a const nil
surface don't try to set surface->status.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -73,6 +73,7 @@ test_sources = \
 	device-offset-fractional.c			\
 	device-offset-positive.c			\
 	device-offset-scale.c				\
+	error-setters.c					\
 	extend-pad.c					\
 	extend-pad-border.c				\
 	extend-pad-similar.c				\
