Implement cairo_backend_t
Allow a backend to completely reimplement the Cairo API as it wants. The
goal is to pass operations to the native backends such as Quartz,
Direct2D, Qt, Skia, OpenVG with no overhead. And to permit complete
logging contexts, and whatever else the imagination holds. Perhaps to
experiment with double-paths?

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -62,6 +62,7 @@ cairo_private = \
 	cairo-combsort-private.h \
 	cairo-compiler-private.h \
 	cairo-composite-rectangles-private.h \
+	cairo-default-context-private.h \
 	cairo-device-private.h \
 	cairo-error-private.h \
 	cairo-fixed-private.h \
@@ -122,6 +123,7 @@ cairo_sources = \
 	cairo-color.c \
 	cairo-composite-rectangles.c \
 	cairo-debug.c \
+	cairo-default-context.c \
 	cairo-device.c \
 	cairo-error.c \
 	cairo-fixed.c \
