ps: Enable native encoding of subsurface patterns.
Carefully handle subsurfaces of a recording surface through the analysis
and paginated surfaces so that we can generate a native pattern for the
vector backends, demonstrated by the PostScript backend.

Nothing remarkable, just a lot of bookkeeping to track the wrapped
surface types and to apply the correct offsets when generating the
subsurface pattern.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1070,6 +1070,7 @@ REFERENCE_IMAGES = \
 	stroke-image.xlib.ref.png \
 	subsurface.ref.png \
 	subsurface.image16.ref.png \
+	subsurface-reflect.ref.png \
 	subsurface-repeat.ref.png \
 	subsurface-similar-repeat.ref.png \
 	surface-pattern-big-scale-down.ref.png \
