test: Expand pthread-show-text to cover all surfaces.
In a similar fashion to pthread-same-source and pthread-similar, check
that the texting handling is thread-safe for all surface and font
backends.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -877,6 +877,9 @@ REFERENCE_IMAGES = \
 	pthread-same-source.image16.ref.png \
 	pthread-same-source.ref.png \
 	pthread-similar.ref.png \
+	pthread-show-text.ref.png \
+	pthread-show-text.image16.ref.png \
+	pthread-show-text.ps.ref.png \
 	ps-surface-source.image16.ref.png \
 	ps-surface-source.rgb24.ref.png \
 	ps-surface-source.argb32.ref.png \
