test: Add subsurface-modify-{child,parent}
Add tests to ensure that modifications to the subsurface via the
original surface are tracked by the subsurface, i.e. that any snapshots
are detached upon modification of the parent as well as modification of
itself and vice versa.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1075,6 +1075,8 @@ REFERENCE_IMAGES = \
 	subsurface.image16.ref.png \
 	subsurface-reflect.ref.png \
 	subsurface-repeat.ref.png \
+	subsurface-modify-child.ref.png \
+	subsurface-modify-parent.ref.png \
 	subsurface-similar-repeat.ref.png \
 	surface-pattern-big-scale-down.ref.png \
 	surface-pattern-big-scale-down.ps.xfail.png \
