--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1075,6 +1075,7 @@ REFERENCE_IMAGES = \
 	subsurface.image16.ref.png \
 	subsurface-reflect.ref.png \
 	subsurface-repeat.ref.png \
+	subsurface-pad.ref.png \
 	subsurface-modify-child.ref.png \
 	subsurface-modify-parent.ref.png \
 	subsurface-similar-repeat.ref.png \
